# gxandria

./: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix
.sqlx/: query-b658f5dd85be93e52ee2b7f7c4dad7fe7ad235bb4951a593f6c45f64a6711707.json  query-c8cda22824728872564903f7ac7dca7d8e9459f734296bebff8f3956d8b5b0b1.json
migrations/: 20260208063840_initial_schema.up.sql
src/: main.rs  sqlite.rs
src/heroic/: epic.rs  gog.rs  launcher.rs  mod.rs
src/igdb/: client.rs  types.rs
src/service/: client.rs  launcher.rs  mod.rs  service.rs  store.rs
